err/prospero.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prospero'...
Listing './lib/python3.5/site-packages/prospero/security'...
Compiling './lib/python3.5/site-packages/prospero/security/auth.py'...
***   File "./lib/python3.5/site-packages/prospero/security/auth.py", line 69
    print "UNSUPPORTED 'qop' METHOD\n"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/prospero/security/ident.py'...
***   File "./lib/python3.5/site-packages/prospero/security/ident.py", line 215
    print fields
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/prospero/utils'...
Compiling './lib/python3.5/site-packages/prospero/utils/encoding.py'...
***   File "./lib/python3.5/site-packages/prospero/utils/encoding.py", line 98
    except UnicodeDecodeError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/prospero-0.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_utils.py'...
***   File "./lib/python3.5/site-packages/tests/test_utils.py", line 60
    print "Starting Test Server on %s" % self.port
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
